actual bugfix for clippy

--- a/app/src/Host/HostMain.css
+++ b/app/src/Host/HostMain.css
@@ -23,6 +23,7 @@ body{
   border: 1px solid #ccc;
   border-radius: 3px;
   outline: none;
+  cursor: text;
   box-shadow: inset 0 1px 2px rgba(0,0,0,0.075);
 }
 
